--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,11 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=update
+
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+info.app.name=Spring Boot Restful Web Services
+info.app.description=Spring Boot Restful Web Services Demo
+info.app.version=1.0.0
